@@ -1,3 +1,9 @@
+2011-03-16  Sebastien Binet  <sebastien.binet@cern.ch>
+
+	* tagging PyUtils-00-10-60
+	* do not set any timeout when run from within valgrind
+	* M python/AthFile/timerdecorator.py
+
 2011-03-14  Sebastien Binet  <sebastien.binet@cern.ch>
 
 	* tagging PyUtils-00-10-59
